# gradescope_ocaml

./: .gitignore  README.md  dune-project  gradescope_ocaml.opam  output.json  report.py  run_autograder  setup.sh
grader/: SumGrader.ml  dune
graders/: BucketGrader.ml  EquivGrader.ml  EquivGraderBucket.ml  FormatUtil.ml  GraderSig.ml  Preamble.ml  dune
impl/: dune
lib/: dune  gradescope_j.ml
refsol/: dune  sum.ml
test/: dune
tests/: GraderMap.ml  SumGrader.ml  dune
util/: BucketGrader.ml  EquivGrader.ml  EquivGraderBucket.ml  GeneralizedBucketGrader.ml  GraderSig.ml  Preamble.ml  README.md  TrivialGrader.ml  dune
util/output/: EasyOutput.ml  OutputSig.ml
util/prod/: ProdGrader2.ml  ProdGrader3.ml  ProdGrader4.ml  ProdGrader5.ml  ProdGrader6.ml  ProdGrader7.ml  ProdGrader8.ml  ProdGrader9.ml
util/result/: Result.ml  Result.mli
